# ROS_Projects

./: README.md
Hands-On-ROS/DI_configure/DI-IMU/: IMU_libraries.ipynb  IMU_read.py  IMU_reading.ipynb
Hands-On-ROS/GoPiGo3_SLAM/gopigo3_navigation/: CMakeLists.txt  package.xml
Hands-On-ROS/GoPiGo3_SLAM/gopigo3_navigation/launch/: gopigo3_gazebo.launch
Hands-On-ROS/GoPiGo3_SLAM/gopigo3_navigation/maps/: test_map.yaml
Hands-On-ROS/Virtual_SLAM/gopigo3_description/: CMakeLists.txt  package.xml
Hands-On-ROS/Virtual_SLAM/gopigo3_description/launch/: gopigo3_rviz.launch
Hands-On-ROS/Virtual_SLAM/gopigo3_description/rviz/: gopigo3_model.rviz
Hands-On-ROS/Virtual_SLAM/virtual_slam/: package.xml
Hands-On-ROS/deep_learning_ros/tensorflow_gopigo/: CMakeLists.txt  package.xml
Hands-On-ROS/deep_learning_ros/tensorflow_gopigo/launch/: basic_shapes.launch  gopigo3_rviz.launch  gopigo3_world.launch  start_image_recognition.launch
Hands-On-ROS/deep_learning_ros/tensorflow_gopigo/scripts/: classify_image.py  image_recognition.py
Hands-On-ROS/deep_learning_ros/tensorflow_gopigo/urdf/: gopigo3.gazebo
ROS_Q&A_140/: README.md
ROS_Q&A_140/set_point/: CMakeLists.txt  README.md  package.xml
ROS_Q&A_140/set_point/src/: main.py
ekf-robot-localization/: README.md
ekf-robot-localization/src/: rqt_multiplot.xml
ekf-robot-localization/src/main/: package.xml
ekf-robot-localization/src/odom_to_trajectory/: CMakeLists.txt  package.xml
rotate_robot/: CMakeLists.txt  package.xml
rotate_robot/src/: main.py  rotate.py
(+11 files in other folders)
